--- a/app/index.html
+++ b/app/index.html
@@ -54,63 +54,65 @@
                             <td>2003</td>
                             <td id="eps1">.65</td>
                             <td id="bookvalue1">11.82</td>
-                            <td>.21</td>
+                            <td id="div1">.21</td>
                         </tr>
                         <tr>
                             <td>2004</td>
                             <td id="eps2">1.11</td>
                             <td>13.05</td>
-                            <td>.24</td>
+                            <td id="div2">.24</td>
                         </tr>
                         <tr>
                             <td>2005</td>
                             <td id="eps3">1.19</td>
                             <td>13.06</td>
-                            <td>.27</td>
+                            <td id="div3">.27</td>
                         </tr>
                         <tr>
                             <td>2006</td>
                             <td id="eps4">1.60</td>
                             <td>15.42</td>
-                            <td>.31</td>
+                            <td id="div4">.31</td>
                         </tr>
                         <tr>
                             <td>2007</td>
                             <td id="eps5">2.24</td>
                             <td>15.67</td>
-                            <td>.35</td>
+                            <td id="div5">.35</td>
                         </tr>
                         <tr>
                             <td>2008</td>
                             <td id="eps6">2.28</td>
                             <td>17.73</td>
-                            <td>.35</td>
+                            <td id="div6">.35</td>
                         </tr>
                         <tr>
                             <td>2009</td>
                             <td id="eps7">1.76</td>
                             <td>18.55</td>
-                            <td>.35</td>
+                            <td id="div7">.35</td>
                         </tr>
                         <tr>
                             <td>2010</td>
                             <td id="eps8">2.03</td>
                             <td>19.78</td>
-                            <td>.40</td>
+                            <td id="div8">.40</td>
                         </tr>
                         <tr>
                             <td>2011</td>
                             <td id="eps9">2.52</td>
                             <td id="bookvalue2">21.21</td>
-                            <td>.60</td>
+                            <td id="div9">.60</td>
                         </tr>
                         <tfoot>
                         <td></td>
-                        <td id="epssum">sdf</td>
-                        <td id="bookvaluediff">sdf</td>
-                        <td>sdf</td>
+                        <td id="epssum"></td>
+                        <td id="bookvaluediff"></td>
+                        <td id="divsum"></td>
                         </tfoot>
                     </table>
+
+                    <p>Total Cash: <span id="totalcash"></span></p>
 
                 </div>
 
