intrinsic value calculator now working

--- a/app/index.html
+++ b/app/index.html
@@ -112,8 +112,8 @@
                         </tfoot>
                     </table>
 
-                    <p>Total Cash: <span id="totalcash"></span></p>
-
+                    <p>Total Cash taken out of business: <span id="totalcash"></span></p>
+                    <p>Intrinsic Value: <span id="intrinsicValue"></span></p>
                 </div>
 
             </div>
