added borders showing what works

--- a/app/index.html
+++ b/app/index.html
@@ -130,12 +130,12 @@
                         </tr>
                     </table>
 
-
+<div style="border: 1px solid green;">
                     <p>Average book value change in the last 9 years: <span id="averageBookValueChange"></span>%</p>
-                    <p>Cash taken out of business (dividends for one year): <span id="totalcash"></span></p>
+                    <p>Cash taken out of business (dividends for one year): $<span id="totalcash"></span></p>
 
                     <p>Current 10 year note: <span id="currentnote"></span>%</p>
-
+</div>
                     <p><strong>Intrinsic Value: <span id="intrinsicValue"></span></strong></p>
                 </div>
 
