--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,25 @@
     <div class="row marketing">
         <div class="col-lg-6">
 
+
+            <div id="chartContainer">
+                <script src="http://d3js.org/d3.v3.min.js"></script>
+                <script src="http://dimplejs.org/dist/dimple.v1.1.2.min.js"></script>
+                <script type="text/javascript">
+                    var svg = dimple.newSvg("#chartContainer", 610, 400);
+                    d3.tsv("/data/example_data.tsv", function (data) {
+
+                        var myChart = new dimple.chart(svg, data);
+                        myChart.setBounds(60, 30, 505, 305);
+                        var x = myChart.addCategoryAxis("x", "Year");
+                        x.addOrderRule("Year");
+                        myChart.addMeasureAxis("y", "Book Value");
+                        var s = myChart.addSeries(null, dimple.plot.line);
+                        myChart.draw();
+                    });
+                </script>
+            </div>
+
             <p>Use the table below to enter in the corresponding values for Disney.</p>
             <table class="table table-bordered">
                 <tr>
@@ -112,7 +131,7 @@
                 <tr>
                     <td></td>
                     <td>total EPS</td>
-                    <td>change in book value</td>
+                    <td>% change in book value</td>
                     <td>total dividends</td>
                 </tr>
                 <tr>
@@ -147,23 +166,7 @@
             <p><strong>Intrinsic Value: <span id="intrinsicValue"></span></strong></p>  </div>
         </div>
 
-        <div id="chartContainer">
-            <script src="http://d3js.org/d3.v3.min.js"></script>
-            <script src="http://dimplejs.org/dist/dimple.v1.1.2.min.js"></script>
-            <script type="text/javascript">
-                var svg = dimple.newSvg("#chartContainer", 590, 400);
-                d3.tsv("/data/example_data.tsv", function (data) {
 
-                    var myChart = new dimple.chart(svg, data);
-                    myChart.setBounds(60, 30, 505, 305);
-                    var x = myChart.addCategoryAxis("x", "Year");
-                    x.addOrderRule("Year");
-                    myChart.addMeasureAxis("y", "Price");
-                    var s = myChart.addSeries(null, dimple.plot.line);
-                    myChart.draw();
-                });
-            </script>
-        </div>
 
     </div>
 
