--- a/app/tests/test.html
+++ b/app/tests/test.html
@@ -27,8 +27,8 @@
 
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
-<script src="/resources/qunit.js"></script>
-<script src="/resources/tests.js"></script>
+<script src="../bower_components/qunit/qunit/qunit.js"></script>
+<script src="tests.js"></script>
 
 
 <!-- build:js scripts/vendor.js -->
