--- a/app/index.html
+++ b/app/index.html
@@ -154,6 +154,7 @@
 
 <!-- build:js scripts/main.js -->
 <script src="scripts/data.json"></script>
+<script src="scripts/util.js"></script>
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
 
