added new stocks and slider

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
                 <tr>
                     <th></th>
                     <th>EPS</th>
-                    <th>Book Value</th>
+                    <th>Book Value / Share</th>
                     <th>Dividend Rate</th>
 
                 </tr>
@@ -111,6 +111,7 @@
 
 
                 <p>Current 10 year note: <span id="currentnote"></span>%</p>
+                <input type="range" name="points" min="0" max="20">
 
                 <p><strong>Intrinsic Value: <span id="intrinsicValue"></span></strong></p></div>
         </div>
