--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/mine.css">
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -46,11 +47,11 @@
                 <script src="http://d3js.org/d3.v3.min.js"></script>
                 <script src="http://dimplejs.org/dist/dimple.v1.1.2.min.js"></script>
                 <script type="text/javascript">
-                    var svg = dimple.newSvg("#chartContainer", 610, 400);
+                    var svg = dimple.newSvg("#chartContainer", 630, 400);
                     d3.tsv("/data/example_data.tsv", function (data) {
 
                         var myChart = new dimple.chart(svg, data);
-                        myChart.setBounds(60, 30, 505, 305);
+                        myChart.setBounds(60, 30, 615, 305);
                         var x = myChart.addCategoryAxis("x", "Year");
                         x.addOrderRule("Year");
                         myChart.addMeasureAxis("y", "Book Value");
@@ -111,8 +112,9 @@
 
 
                 <p>Current 10 year note: <span id="currentnote"></span>%</p>
+                <!--
                 <input type="range" name="points" min="0" max="20">
-
+                -->
                 <p><strong>Intrinsic Value: <span id="intrinsicValue"></span></strong></p></div>
         </div>
 
