--- a/app/index.html
+++ b/app/index.html
@@ -44,21 +44,7 @@
 
 
             <div id="chartContainer">
-                <script src="http://d3js.org/d3.v3.min.js"></script>
-                <script src="http://dimplejs.org/dist/dimple.v1.1.2.min.js"></script>
-                <script type="text/javascript">
-                    var svg = dimple.newSvg("#chartContainer", 630, 400);
-                    d3.tsv("/data/example_data.tsv", function (data) {
-
-                        var myChart = new dimple.chart(svg, data);
-                        myChart.setBounds(60, 30, 615, 305);
-                        var x = myChart.addCategoryAxis("x", "Year");
-                        x.addOrderRule("Year");
-                        myChart.addMeasureAxis("y", "Book Value");
-                        var s = myChart.addSeries(null, dimple.plot.line);
-                        myChart.draw();
-                    });
-                </script>
+   
             </div>
 
             <p>Use the table below to enter in the corresponding values for Disney.</p>
@@ -102,15 +88,10 @@
                 </tbody>
             </table>
 
-
             <div style="border: 1px solid green;">
                 <p>Cash taken out of business (dividends for one year): $<span id="totalcash"></span></p>
-
                 <p>Average book value change in the last 9 years: <span id="averageBookValueChange"></span>%</p>
-
                 <p>Current book value: $<span id="currentBookValue"></span></p>
-
-
                 <p>Current 10 year note: <span id="currentnote"></span>%</p>
                 <!--
                 <input type="range" name="points" min="0" max="20">
@@ -118,9 +99,7 @@
                 <p><strong>Intrinsic Value: <span id="intrinsicValue"></span></strong></p></div>
         </div>
 
-
     </div>
-
 
     <div class="footer">
         <p>I ♥ value investing - should be 40.44</p>
@@ -128,12 +107,14 @@
 
 </div>
 
-
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/jquery.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/mustache/mustache.js"></script>
+<script src="bower_components/backbone/backbone.js"></script>
+<script src="bower_components/d3/d3.js"></script>
+<script src="bower_components/dimple/dist/dimple.v1.1.2.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
